--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,10 +7,10 @@ log4j.appender.FILE.File=logs/log.out
 
 # Define the layout for file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.conversionPattern=%m%n
+log4j.appender.FILE.layout.conversionPattern=%d %p [%c] - %m%n
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%m%n
+log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
