--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
 	<artifactId>javachallenge3</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Java_Challenge</name>
+    <properties>
+	  <maven.compiler.source>1.8</maven.compiler.source>
+	  <maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.json</groupId>
