--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger = DEBUG, FILE, stdout
 # Define the file appender
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.File=logs/log.out
-
+log4j.appender.FILE.append=false
 # Define the layout for file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.conversionPattern=%d %p [%c] - %m%n
