--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 			<version>20140107</version>
 		</dependency>
 		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.11</version>
+		</dependency>
+		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		    <version>2.7</version>
@@ -25,11 +30,11 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.4</version>
 		</dependency>
-		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-math3</artifactId>
-		    <version>3.3</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.apache.commons</groupId> -->
+<!-- 		    <artifactId>commons-math3</artifactId> -->
+<!-- 		    <version>3.3</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-log4j12</artifactId>
